# clobber

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/clobber/: clobber.h
src/: clobber.cpp
test/: test.cpp
